# wsl_localhost_addr_server

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
